--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,77 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+header {
+  justify-content: center;
+  align-items: center;
+}
+
+title {
+  justify-content: center;
+}
+
+/* homepage */
+body,
+html {
+  height: 100%;
+}
+
+#homepage {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+#homepage-head {
+  font-size: 20px;
+  font-weight: bold;
+  color: #e9c46a;
+  border: 3px #f4a261;
+  padding: 1em 1.6em;
+  font-weight: 100;
+  border-radius: 5px;
+  line-height: 2em;
+}
+
+#homepage-text {
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  text-shadow: 0px 0px 5px black;
+  margin-bottom: 3px;
+  font-weight: 700;
+  color: #ffb248;
+}
+
+.game--container {
+  border: 4px solid darkblue;
+  border-radius: 10px;
+  width: 500px;
+  height: 500px;
+  margin: 0 auto;
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+}
+.cell {
+  font-family: "Permanent Marker", cursive;
+  width: 100px;
+  height: 100px;
+  box-shadow: 0 0 0 1px #333333;
+  border: 1px solid #333333;
+  cursor: pointer;
+  line-height: 100px;
+  font-size: 60px;
+}
+#homepage-footer {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 1em 1.6em;
+  font-weight: 100;
+  border-radius: 5px;
+  line-height: 2em;
+}
+
+#homepage-footer-text {
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  text-shadow: 0px 0px 5px black;
+}
